--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.11.1",
     "@mantine/core": "^7.11.1",
     "@mantine/hooks": "^7.11.1",
+    "@tabler/icons-react": "^3.8.0",
+    "axios": "^1.7.2",
+    "axios-cache-interceptor": "^1.5.3",
+    "embla-carousel-react": "^7.1.0",
+    "pokenode-ts": "^1.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
